@@ -1,6 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = libltdl src include demo
+SUBDIRS = src include demo
+if MAKE_LIBTOOL
+  SUBDIRS+=libltdl
+endif
 
 bin_SCRIPTS = cxxtools-config
 
