@@ -1,3 +1,9 @@
+2007-09-16 tommi@tntnet.org
+  - don't use libltdl by default since it brings more problems than it solves.
+    On linux we need RTLD_GLOBAL in dlopen to make exceptions and rtti
+    working. libltdl does not pass that flag. On Aix shared libraries has a
+    extension .a by default, which is not recognized by libltdl.
+
 2007-07-07 tommi@tntnet.org
   - rewritten ini-file-parser
   - make iconv unconditional and make iconv-buffer bigger for better
